Revert "Fix .top-bar-section not to wrap the icons-menu"

--- a/app/assets/stylesheets/darkswarm/menu.scss
+++ b/app/assets/stylesheets/darkswarm/menu.scss
@@ -44,13 +44,6 @@ nav.top-bar {
 
 .top-bar-section {
   border-bottom: 1px solid $light-grey-transparency;
-  display: flex;
-  justify-content: space-between;
-
-  .nav-main-menu,
-  .nav-icons-menu {
-    flex-shrink: 0;
-  }
 
   a.icon {
     &:hover {
@@ -106,12 +99,21 @@ nav.top-bar {
     }
   }
 
+  ul.center {
+    display: inline-block;
+
+    // By default, we center between the left and right uls, but we want to be centered
+    // relative to the whole page. The difference in width between the other uls is 74px,
+    // so we offset by that amount here.
+    margin-left: -74px;
+  }
+
   ul.dropdown {
     border: 1px solid $smoke;
     border-top: none;
   }
 
-  .nav-icons-menu {
+  ul.right {
     > li {
       border-left: 1px solid #ddd;
       padding: 0 14px;
@@ -242,7 +244,9 @@ nav.top-bar {
 
 .top-bar .ofn-logo img {
   height: auto;
+  width: auto;
   max-height: 44px;
+  max-width: 250px;
 }
 
 .left-off-canvas-menu {
@@ -284,6 +288,10 @@ nav.top-bar {
     ul li a,
     .has-dropdown > a {
       padding: 0 ($topbar-height / 8) !important;
+    }
+
+    ul.center {
+      margin-left: -24px;
     }
   }
 }
